@@ -2,6 +2,7 @@
  - (djm) Enable /etc/nologin check on PAM systems, as some lack the 
    pam_nologin module. Report from William Yodlowsky 
    <bsd@openbsd.rutgers.edu>
+ - (djm) Revert dirname fix, a better one is on its way.
 
 20010711
  - (djm) dirname(3) may modify its argument on glibc and other systems. 
